objects/Bulk_Upload_Donations__c.object
<CustomObject>
    <fields>
        <fullName>Donation_Count__c</fullName>
        <label>Donation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Allocations_Failed__c</fullName>
        <label>Total Allocations Failed</label>
        <summaryFilterItems>
            <field>Bulk_Upload_Data__c.Is_Allocation_Processed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Allocations__c</fullName>
        <inlineHelpText>Allocation Insert</inlineHelpText>
        <label>Total Allocations</label>
        <summaryFilterItems>
            <field>Bulk_Upload_Data__c.Is_Allocation_Processed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Donation_Amount__c</fullName>
        <label>Total Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Donations_Failed__c</fullName>
        <label>Total Donations Failed</label>
        <summaryFilterItems>
            <field>Bulk_Upload_Data__c.Is_Opportunity_Processed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Donations__c</fullName>
        <label>Total Donations</label>
        <summaryFilterItems>
            <field>Bulk_Upload_Data__c.Is_Opportunity_Processed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payments_Failed__c</fullName>
        <label>Total Payments Failed</label>
        <summaryFilterItems>
            <field>Bulk_Upload_Data__c.Is_Payment_Processed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <label>Total Payments</label>
        <summaryFilterItems>
            <field>Bulk_Upload_Data__c.Is_Payment_Processed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Row_Count__c</fullName>
        <label>Total Row Count</label>
        <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rows__c</fullName>
        <label>Total Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upload_File_Type__c</fullName>
        <label>Upload File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bulk Upload Donations</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Total_Donation_Amount__c</columns>
        <columns>Total_Rows__c</columns>
        <columns>Upload_File_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Bulk_Upload_Today</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Total_Donation_Amount__c</columns>
        <columns>Total_Rows__c</columns>
        <columns>Upload_File_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>12/16/2021 12:00 AM</value>
        </filters>
        <label>Bulk Upload - Today</label>
    </listViews>
    <nameField>
        <label>Bulk Upload Donations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulk Upload Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>